# lucille

./: .gitignore  CLAUDE.md  Makefile  README.md  fetch_github_analytics.py  github_pr_analyzer.py  jira.py  jira_epic_completion.py  pyproject.toml  requirements-dev.txt  requirements.txt  slack_deploys.py
lucille/: claude_token_analyzer.py  claude_token_usage_by_week_by_user.py  deployment_graph.py  jira_filter_epics.py  jira_kanban_scraper.py  jira_label_updater.py  jira_lead_time_baseline_calculator.py  lead_time_for_changes.py  lead_time_report.py  opsgenie_alerts_chart_weeks.py  opsgenie_graph.py  publish.py  reformat_slack_scrape.py  slack_deploys.py  weekly_deployment_trends.py
lucille/ai_metrics/: __init__.py  analyze.py  detect.py  fetch.py  jira_cycle.py  main.py
lucille/aws_budget_review/: _common.py  cost_trend.py  datadog_trend.py  may_regime_change.py  service_savings.py
lucille/cfr/: cfr.py  config_loader.py
lucille/cfr/logic/: cfr_rollup.py  deployment_detector.py  intervention_detector.py  pr_classifier.py
lucille/cfr/output/: confluence_publisher.py  csv_writer.py  summary_reporter.py
lucille/cfr/sources/: github_client.py  jira_client.py
lucille/cfr/tests/: test_cfr_rollup.py  test_deployment_detector.py  test_intervention_detector.py  test_pr_classifier.py
lucille/cfr/tests/fixtures/: sample_jira_issues.json  sample_prs.json  sample_releases.json
lucille/common/: __init__.py  config.py  logging.py  paths.py
lucille/datadog/: export.py  export_opsgenie_monitors.py  opsgenie_to_datadog.py
lucille/github/: __init__.py  auto_runner_prs.py  commit_fetcher.py  contributors.py  deploy_history.py  fetch_analytics.py  fetch_github_security_alerts.py  github_actions_success_rate.py  github_utils.py  pr_analyzer.py  session.py
lucille/jira/: __init__.py  active_sprints.py  comment_stale_tickets.py  cost_category_breakdown.py  cost_category_breakdown_chart.py  cycle_time_graph.py  epic_completion.py  epic_effort_summary.py  filter_epics.py  grouped_ticket_generator.py  jira_cycle_time_analysis.py  kanban_scraper.py  label_updater.py  lead_time_baseline_calculator.py  project_contributors.py  query.py  sprint_analyzer.py  sprint_cycle_time_analyzer.py  stage_durations.py  stale_tickets_to_csv.py  sup_cycle_time.py  sup_ticket_volume.py  ticket_changelog.py  ticket_generator.py  ticket_utils.py  utils.py
lucille/jira/jobs/: pci_access_review.yaml  pci_user_role_review.yaml
lucille/jira/support/: __init__.py  charts.py  cli.py  io.py  weekly.py
lucille/lead_time/: aggregations.py  buckets.py  visualizations.py
lucille/opsgenie/: __init__.py  io.py  main.py  noise.py
lucille/vendor_spend/: aws_cost.py  aws_cost_explorer_csv.py  config.py  databricks_auth.py  databricks_console_csv.py  databricks_cost.py  datadog_cost.py  datadog_trends_csv.py  fetch_vendor_spend.py  graph_vendor_spend.py  inspect_datadog_response.py  list_databricks_skus.py  weekly_buckets.py
tests/: context.py  test_ai_metrics_analyze.py  test_ai_metrics_detect.py  test_commit_fetcher.py  test_common_config.py  test_cost_category_breakdown_chart.py  test_fetch_github_analytics.py  test_github_session.py  test_github_utils.py  test_jira_cycle_time_analysis.py  test_lead_time_baseline_calculator.py  test_lead_time_for_changes.py  test_opsgenie_alerts_chart_weeks.py  test_opsgenie_io.py  test_opsgenie_main.py  test_opsgenie_noise.py  test_opsgenie_to_datadog.py  test_pr_analyzer.py  test_pr_set.csv  test_publish.py  test_reformat_slack_scrape.py  test_slack_deploys.py  test_stale_tickets.py  test_sup_cycle_time.py  test_sup_ticket_volume.py  test_ticket_changelog.py  test_weekly_deployment_trends.py
tests/lead_time/: context.py  test_aggregations.py  test_buckets.py
tests/vendor_spend/: test_aws_cost.py  test_aws_cost_explorer_csv.py  test_config.py  test_databricks_auth.py  test_databricks_console_csv.py  test_databricks_cost.py  test_datadog_cost.py  test_datadog_trends_csv.py  test_fetch_vendor_spend.py  test_graph_vendor_spend.py  test_list_databricks_skus.py  test_weekly_buckets.py
